Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35804

Mac OS: DnD does not get dropEvent() if dragging is started on control button

    XMLWordPrintable

Details

    • macOS

    Description

      If dragging is enabled when control button is pressed it never gets dropEvent().
      It further gives warning
      QNSView mouseDragged: Internal mouse button tracking invalid (missing Qt::LeftButton)

      Attached example reproduce this. Exact same code works good in Qt4.8

      Attachments

        1. main.cpp
          3 kB
        2. QTBUG-35804.diff
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes