Cocoa: Follow-up m_sendUpAsRightButton for DnD

Clear and test for the correct button according to
the m_sendUpAsRightButton flag.

(Fixes the warning mentioned QTBUG-35804)

Task-number: QTBUG-35804
Change-Id: I5d724d1cfa66b88b8f54e228bd7fb73a04a9f4c9
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>